force-app/main/default/objects/Revenue_Contract_Hold__c/Revenue_Contract_Hold__c.object-meta.xml
<CustomObject>
    <label>Revenue Contract Hold</label>
    <nameField>
        <displayFormat>H-{000000000}</displayFormat>
        <label>Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Contract Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>