force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Applied_Comments__c.field-meta.xml
<CustomField>
    <fullName>Applied_Comments__c</fullName>
    <label>Applied Comments</label>
    <type>TextArea</type>
</CustomField>