force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Applied_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Applied_File_Id__c</fullName>
    <label>Applied File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>