force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Applied_Period__c.field-meta.xml
<CustomField>
    <fullName>Applied_Period__c</fullName>
    <label>Applied Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>