force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Can_Delete__c.field-meta.xml
<CustomField>
    <fullName>Can_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Delete</label>
    <type>Checkbox</type>
</CustomField>