force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Hold_Definition__c.field-meta.xml
<CustomField>
    <fullName>Hold_Definition__c</fullName>
    <label>Hold Definition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>