force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Hold_GUID__c.field-meta.xml
<CustomField>
    <fullName>Hold_GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Hold GUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>