force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Hold_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Type__c</fullName>
    <label>Hold Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>