force-app/main/default/objects/Revenue_Contract_Hold__c/fields/RC_Version_When_Released__c.field-meta.xml
<CustomField>
    <fullName>RC_Version_When_Released__c</fullName>
    <label>RC Version When Released</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>