force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Released_By__c.field-meta.xml
<CustomField>
    <fullName>Released_By__c</fullName>
    <label>Released By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>