force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Released_Comments__c.field-meta.xml
<CustomField>
    <fullName>Released_Comments__c</fullName>
    <label>Released Comments</label>
    <type>TextArea</type>
</CustomField>