force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Released_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Released_File_Id__c</fullName>
    <label>Released File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>