force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Released_On__c.field-meta.xml
<CustomField>
    <fullName>Released_On__c</fullName>
    <label>Released On</label>
    <type>Date</type>
</CustomField>