force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Released_Period__c.field-meta.xml
<CustomField>
    <fullName>Released_Period__c</fullName>
    <label>Released Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>