force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Revenue_Contract__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipName>Holds</relationshipName>
    <type>Lookup</type>
</CustomField>