force-app/main/default/objects/Revenue_Contract_Hold__c/fields/Revenue_Contract_Hold_Name__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Hold_Name__c</fullName>
    <label>Hold Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>