force-app/main/default/objects/Revenue_Contract_Hold__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>released</fullName>
                <label>Released</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>